--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext.kotlin_version = '1.6.10'
     repositories {
-        google()
-        jcenter()
-        
+//        google()
+//        jcenter()
+        maven{
+            allowInsecureProtocol true
+            url 'http://localhost:8081/repository/maven-public/'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,9 +21,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
-        
+//        google()
+//        jcenter()
+        maven{
+            allowInsecureProtocol true
+            url 'http://localhost:8081/repository/maven-public/'
+        }
     }
 }
 
