--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         ndk {
-            abiFilters 'armeabi-v7a' // 指定要ndk需要兼容的架构(这样其他依赖包里其他so会被过滤掉)
+            abiFilters 'armeabi-v7a' , 'arm64-v8a' // 指定要ndk需要兼容的架构(这样其他依赖包里其他so会被过滤掉)
         }
     }
     buildTypes {
