添加一些注释

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.GetScreenActivity"
+            android:name=".activity.LauncherActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,22 +29,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activity.GetScreenActivity"
+            android:exported="true" />
+        <activity
             android:name=".activity.HumanSegActivity"
             android:exported="true"
-            android:hardwareAccelerated="true">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
-        </activity>
+            android:hardwareAccelerated="true" />
         <activity
             android:name=".activity.MainActivity"
-            android:hardwareAccelerated="true">
-            <!--             <intent-filter>-->
-            <!--             <action android:name="android.intent.action.MAIN" />-->
-            <!--             <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--             </intent-filter>-->
-        </activity>
+            android:hardwareAccelerated="true" />
         <activity
             android:name=".activity.SettingsActivity"
             android:label="Settings" />
